--- a/Labs/ML_Lab_1.ipynb
+++ b/Labs/ML_Lab_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "39253eb2",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
     "\n",
     "\n",
     "sumXY = sum([x[i]*y[i] for i in range(len(x))])\n",
-    "n_sumXY = len(x)*sumXY\n",
+    "# n_sumXY = len(x)*sumXY\n",
     "\n",
     "sumXsumY = sumX*sumY\n",
     "\n",
