LDA Analysis added

--- a/Labs/Lab_2.ipynb
+++ b/Labs/Lab_2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3800e85c",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9c7b0b96",
