--- a/Labs/Lab_3.ipynb
+++ b/Labs/Lab_3.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47795ca8",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression P2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "535aa7bb",
