--- a/Labs/Lab_1.ipynb
+++ b/Labs/Lab_1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d36261ad",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39253eb2",
